--- a/user/templates/user/search.html
+++ b/user/templates/user/search.html
@@ -117,6 +117,7 @@
                 <option value="">--Select--</option>
                 <option value="Lahore">Lahore</option>
                 <option value="Karachi">Karachi</option>
+                <option value="Rawalpindi">Rawalpindi</option>
                 <option value="Islamabad">Islamabad</option>
                 <option value="Peshawar">Peshawar</option>
                 <option value="Multan">Multan</option>
@@ -141,6 +142,7 @@
                 <option value="">--Select--</option>
                 <option value="Lahore">Lahore</option>
                 <option value="Karachi">Karachi</option>
+                <option value="Rawalpindi">Rawalpindi</option>
                 <option value="Islamabad">Islamabad</option>
                 <option value="Peshawar">Peshawar</option>
                 <option value="Multan">Multan</option>
