--- a/user/templates/user/profile.html
+++ b/user/templates/user/profile.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
     <title>User Profile</title>
     <link rel="stylesheet" href="{% static 'css/profile.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -13,18 +12,18 @@
             margin: 0;
             font-family: 'Times New Roman', Times, serif;
             background-color: #f4f4f4;
-            transition: background-image 1s ease-in-out; 
+            transition: background-image 1s ease-in-out;
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
-            color: #fff; 
+            color: #fff;
         }
-        
+
         .navbar {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background-color: darkgreen; 
+            background-color: darkgreen;
             padding: 25px 30px;
             color: white;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -145,10 +144,9 @@
             padding: 10px 20px;
             border: none;
             border-radius: 5px;
+            cursor: pointer;
             font-size: 1em;
-        }
-        .modal-content button:active {
-            transform: scale(0.95);
+            display: flex;
         }
         .modal-content .confirm-btn {
             background-color: #d9534f;
@@ -227,15 +225,11 @@
         "{% static 'images/WhatsApp Image 2025-04-11 at 11.36.08_8ccf0fac.jpg' %}",
         "{% static 'images/image105.jpg' %}",
         "{% static 'images/IMG-20250901-WA0029.jpg' %}",
-        "{% static 'images/image103.jpg' %}",
         "{% static 'images/IMG-20250901-WA0031.jpg' %}",
-        "{% static 'images/image102.jpg' %}",
         "{% static 'images/image106.jpg' %}",
         "{% static 'images/image107.jpg' %}",
         "{% static 'images/image108.jpg' %}",
-        "{% static 'images/image109.jpg' %}",
-        "{% static 'images/images.jpeg' %}",
-         "{% static 'images/image10.jpg' %}",
+        "{% static 'images/image10.jpg' %}",
     ];
     let currentIndex = 0;
 
