--- a/user/templates/user/registration.html
+++ b/user/templates/user/registration.html
@@ -31,7 +31,7 @@
             <input type="email" name="confirm_email" placeholder="abc@gmail.com" required>
 
             <label>CNIC No:</label>
-            <input type="text" name="cnic" id="cnicNumber" placeholder="00000-0000000-0" maxlength="15" required>
+            <input type="text" name="cnic" id="cnicNumber" placeholder="00000-0000000-0" required>
 
             <div style="position: relative; margin-top: 10px;">
                 <label for="password">Password:</label>
