--- a/user/templates/user/book.html
+++ b/user/templates/user/book.html
@@ -91,6 +91,16 @@
             return;
         }
     });
+
+    window.onload = function() {
+        if (performance.navigation.type === 1) {
+        } else {
+            setTimeout(function() {
+                location.reload();
+            }, 100); 
+        }
+    }
+
 </script>
 
 </body>
