--- a/user/templates/user/bookingdet.html
+++ b/user/templates/user/bookingdet.html
@@ -204,6 +204,16 @@ document.addEventListener('DOMContentLoaded', () => {
         confirmationModal.style.display = 'none';
     });
 });
+
+    window.onload = function() {
+        if (performance.navigation.type === 1) {
+        } else {
+            setTimeout(function() {
+                location.reload();
+            }, 100); 
+        }
+    }
+
 </script>
 </body>
 </html>
