--- a/user/templates/user/bookinghistory.html
+++ b/user/templates/user/bookinghistory.html
@@ -89,5 +89,15 @@ body {
             <a href="{% url 'profile'%}" class="btn btn-primary btn-lg m-2">Back To Profile</a>
         </div>
     </div>
+    <script>
+    window.onload = function() {
+        if (performance.navigation.type === 1) {
+        } else {
+            setTimeout(function() {
+                location.reload();
+            }, 100); 
+        }
+    }
+</script>
 </body>
 </html>
