--- a/user/templates/user/cancel.html
+++ b/user/templates/user/cancel.html
@@ -73,6 +73,15 @@
         <a href="{% url 'profile' %}" class="option-button">Back to Profile</a>
 
     </div>
-
+<script>
+    window.onload = function() {
+        if (performance.navigation.type === 1) {
+        } else {
+            setTimeout(function() {
+                location.reload();
+            }, 100); 
+        }
+    }
+</script>
 </body>
 </html>
