--- a/user/templates/user/faremanagement.html
+++ b/user/templates/user/faremanagement.html
@@ -116,6 +116,15 @@
             </form>
         </section>
     </div>
-
+<script>
+    window.onload = function() {
+        if (performance.navigation.type === 1) {
+        } else {
+            setTimeout(function() {
+                location.reload();
+            }, 100); 
+        }
+    }
+</script>
 </body>
 </html>
