--- a/user/templates/user/forget_password_request.html
+++ b/user/templates/user/forget_password_request.html
@@ -86,5 +86,15 @@
             {% endfor %}
         </ul>
     </div>
+    <script>
+    window.onload = function() {
+        if (performance.navigation.type === 1) {
+        } else {
+            setTimeout(function() {
+                location.reload();
+            }, 100); 
+        }
+    }
+</script>
 </body>
 </html>
