--- a/user/templates/user/hotel.html
+++ b/user/templates/user/hotel.html
@@ -169,6 +169,15 @@
             });
             updateHotelDropdown();
         });
+
+    window.onload = function() {
+        if (performance.navigation.type === 1) {
+        } else {
+            setTimeout(function() {
+                location.reload();
+            }, 100); 
+        }
+    }
     </script>
 </body>
 </html>
