--- a/user/templates/user/hoteldet.html
+++ b/user/templates/user/hoteldet.html
@@ -280,6 +280,14 @@
             confirmationModal.style.display = 'none';
         });
     });
+    window.onload = function() {
+        if (performance.navigation.type === 1) {
+        } else {
+            setTimeout(function() {
+                location.reload();
+            }, 100); 
+        }
+    }
 </script>
 
 </body>
