--- a/user/templates/user/hotelmanagement.html
+++ b/user/templates/user/hotelmanagement.html
@@ -345,6 +345,14 @@
                 input.setAttribute('max', maxDate);
             });
         });
+    window.onload = function() {
+        if (performance.navigation.type === 1) {
+        } else {
+            setTimeout(function() {
+                location.reload();
+            }, 100); 
+        }
+    }
     </script>
 </body>
 </html>
