--- a/user/templates/user/notification.html
+++ b/user/templates/user/notification.html
@@ -136,6 +136,14 @@
                 });
             });
         });
+    window.onload = function() {
+        if (performance.navigation.type === 1) {
+        } else {
+            setTimeout(function() {
+                location.reload();
+            }, 100); 
+        }
+    }
     </script>
 </body>
 
