--- a/user/templates/user/password_rest_form.html
+++ b/user/templates/user/password_rest_form.html
@@ -92,7 +92,6 @@
         <h2>Reset Password</h2>
         <form method="post">
             {% csrf_token %}
-            <!-- Wrapper for the new password input and toggle icon -->
             <div class="input-with-icon">
                 <input type="password" id="new_password" name="new_password" placeholder="New Password" required>
  
@@ -129,6 +128,14 @@
                 });
             });
         });
+    window.onload = function() {
+        if (performance.navigation.type === 1) {
+        } else {
+            setTimeout(function() {
+                location.reload();
+            }, 100); 
+        }
+    }
     </script>
 </body>
 </html>
