--- a/user/templates/user/password_verify_otp.html
+++ b/user/templates/user/password_verify_otp.html
@@ -101,6 +101,15 @@
                 return true; 
             }
         }
+        
+    window.onload = function() {
+        if (performance.navigation.type === 1) {
+        } else {
+            setTimeout(function() {
+                location.reload();
+            }, 100); 
+        }
+    }
     </script>
 </body>
 </html>
