--- a/user/templates/user/paymentmanagement.html
+++ b/user/templates/user/paymentmanagement.html
@@ -53,6 +53,7 @@
            background-color: green;
            color: white;
         }
+        
     </style>
 </head>
 <body>
@@ -146,6 +147,15 @@
         </tbody>
     </table>
 </div>
-
+<script>
+    window.onload = function() {
+        if (performance.navigation.type === 1) {
+        } else {
+            setTimeout(function() {
+                location.reload();
+            }, 100); 
+        }
+    }
+</script>
 </body>
 </html>
