--- a/user/templates/user/prodetails.html
+++ b/user/templates/user/prodetails.html
@@ -110,6 +110,14 @@
             document.addEventListener('DOMContentLoaded', updateNotifications);
             setInterval(updateNotifications, 10000);
         });
+    window.onload = function() {
+        if (performance.navigation.type === 1) {
+        } else {
+            setTimeout(function() {
+                location.reload();
+            }, 100); 
+        }
+    }
     </script>
 </body>
 </html>
