--- a/user/templates/user/profile.html
+++ b/user/templates/user/profile.html
@@ -270,6 +270,14 @@
     cancelBtn.addEventListener('click', function() {
         hideLogoutModal();
     });
+    window.onload = function() {
+        if (performance.navigation.type === 1) {
+        } else {
+            setTimeout(function() {
+                location.reload();
+            }, 100); 
+        }
+    }
 </script>
 
 </body>
