--- a/user/templates/user/searchandbook.html
+++ b/user/templates/user/searchandbook.html
@@ -159,7 +159,7 @@
             </select><br><br>
 
             <label>No of Passengers:</label>
-            <input type="number" id="no_of_passenger" name="no_of_passengers" min="1" max="10" value=" "><br><br>
+            <input type="number" id="no_of_passenger" name="no_of_passengers" min="1" max="10" value="1"><br><br>
 
             <label>Travel Date:</label>
             <input type="date" id="travel_date" name="travel_date" required><br><br>
