--- a/user/templates/user/taxi.html
+++ b/user/templates/user/taxi.html
@@ -255,6 +255,14 @@
             document.getElementById('booking-form-container').classList.remove('hidden');
         };
     });
+    window.onload = function() {
+        if (performance.navigation.type === 1) {
+        } else {
+            setTimeout(function() {
+                location.reload();
+            }, 100); 
+        }
+    }
 </script>
 
 </body>
