--- a/user/templates/user/taximanagement.html
+++ b/user/templates/user/taximanagement.html
@@ -375,6 +375,15 @@
         travelDateInput.min = minDate;
         travelDateInput.max = maxDate;
     });
+
+    window.onload = function() {
+        if (performance.navigation.type === 1) {
+        } else {
+            setTimeout(function() {
+                location.reload();
+            }, 100); 
+        }
+    }
 </script>
 
 </body>
