--- a/user/templates/user/ticketmanagement.html
+++ b/user/templates/user/ticketmanagement.html
@@ -285,6 +285,15 @@
         </tbody>
     </table>
 </div>
-
+<script>
+    window.onload = function() {
+        if (performance.navigation.type === 1) {
+        } else {
+            setTimeout(function() {
+                location.reload();
+            }, 100); 
+        }
+    }
+</script>
 </body>
 </html>
