--- a/user/templates/user/train_history.html
+++ b/user/templates/user/train_history.html
@@ -184,5 +184,15 @@
             </div>
         {% endif %}
     </div>
+    <script>
+    window.onload = function() {
+        if (performance.navigation.type === 1) {
+        } else {
+            setTimeout(function() {
+                location.reload();
+            }, 100); 
+        }
+    }
+</script>
 </body>
 </html>
