--- a/user/templates/user/contactus.html
+++ b/user/templates/user/contactus.html
@@ -154,5 +154,15 @@
             <button type="submit">Send Message</button>
         </form>
     </div>
+    <script>
+    window.onload = function() {
+        if (performance.navigation.type === 1) {
+        } else {
+            setTimeout(function() {
+                location.reload();
+            }, 100); 
+        }
+    }
+</script>
 </body>
 </html>
