--- a/user/templates/user/generatereport.html
+++ b/user/templates/user/generatereport.html
@@ -48,6 +48,15 @@
         <button type="submit">Generate</button>
     </form>
 </div>
-
+<script>
+    window.onload = function() {
+        if (performance.navigation.type === 1) {
+        } else {
+            setTimeout(function() {
+                location.reload();
+            }, 100); 
+        }
+    }
+</script>
 </body>
 </html>
