--- a/user/templates/user/loadingpage.html
+++ b/user/templates/user/loadingpage.html
@@ -83,6 +83,15 @@
             })
             .catch(error => console.error("Error fetching status:", error));
     }, 3000);
+    window.onload = function() {
+        if (performance.navigation.type === 1) {
+        } else {
+            setTimeout(function() {
+                location.reload();
+            }, 100); 
+        }
+    }
+
 </script>
 
 </body>
