--- a/user/templates/user/managefaqs.html
+++ b/user/templates/user/managefaqs.html
@@ -50,6 +50,15 @@
 </table>
 
 </div>
-
+<script>
+    window.onload = function() {
+        if (performance.navigation.type === 1) {
+        } else {
+            setTimeout(function() {
+                location.reload();
+            }, 100); 
+        }
+    }
+</script>
 </body>
 </html>
