--- a/user/templates/user/managenotifications.html
+++ b/user/templates/user/managenotifications.html
@@ -63,6 +63,16 @@
             </tbody>
         </table>
     </div>
+    <script>
+    window.onload = function() {
+        if (performance.navigation.type === 1) {
+        } else {
+            setTimeout(function() {
+                location.reload();
+            }, 100); 
+        }
+    }
+</script>
 </body>
 
 </html>
