--- a/user/templates/user/newlogin.html
+++ b/user/templates/user/newlogin.html
@@ -100,6 +100,14 @@
                 return isEmailValid;
             }
         });
+    window.onload = function() {
+        if (performance.navigation.type === 1) {
+        } else {
+            setTimeout(function() {
+                location.reload();
+            }, 100); 
+        }
+    }
     </script>
 </body>
 
