--- a/user/templates/user/report_template.html
+++ b/user/templates/user/report_template.html
@@ -293,5 +293,15 @@
     {% else %}
         <p class="no-data">No data found for the selected date range.</p>
     {% endif %}
+    <script>
+    window.onload = function() {
+        if (performance.navigation.type === 1) {
+        } else {
+            setTimeout(function() {
+                location.reload();
+            }, 100); 
+        }
+    }
+</script>
 </body>
 </html>
