--- a/user/templates/user/search.html
+++ b/user/templates/user/search.html
@@ -255,5 +255,13 @@
     window.onload = function() {
         document.querySelector('form').reset();
     };
+    window.onload = function() {
+        if (performance.navigation.type === 1) {
+        } else {
+            setTimeout(function() {
+                location.reload();
+            }, 100); 
+        }
+    }
 </script>
 </html>
